Bug 4756 - addr2line fails on relocatable linux kernel
Summary: addr2line fails on relocatable linux kernel
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.18
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-07-09 18:37 UTC by H.J. Lu
Modified: 2007-07-10 13:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-07-09 18:37:21 UTC
addr2line applies relocation on relocatable linux kernel, which leads to

[hjl@gnu-5 linux-2.6.21.i686]$ grep c10353a4 System.map 
c10353a4 T rcu_barrier
[hjl@gnu-5 linux-2.6.21.i686]$ addr2line -e vmlinux c10353a4
??:0
[hjl@gnu-5 linux-2.6.21.i686]$ readelf -S vmlinux 
There are 84 section headers, starting at offset 0x2bc76d4:

Section Headers:
  [Nr] Name              Type            Addr     Off    Size   ES Flg Lk Inf Al
  [ 0]                   NULL            00000000 000000 000000 00      0   0  0
  [ 1] .text.head        PROGBITS        c1000000 001000 0000a4 00  AX  0   0  4
  [ 2] .rel.text.head    REL             00000000 2bc83f4 000050 08     82   1  4
  [ 3] .text             PROGBITS        c1001000 002000 203adb 00  AX  0   0 4096
  [ 4] .rel.text         REL             00000000 2bc8444 084250 08     82   3  4
  [ 5] __ex_table        PROGBITS        c1204ae0 205ae0 000e30 00   A  0   0  8
  [ 6] .rel__ex_table    REL             00000000 2c4c694 001c60 08     82   5  4
  [ 7] .rodata           PROGBITS        c1206000 207000 0b4c1b 00   A  0   0 32
  [ 8] .rel.rodata       REL             00000000 2c4e2f4 041d48 08     82   7  4
  [ 9] .pci_fixup        PROGBITS        c12bac1c 2bbc1c 000728 00   A  0   0  4
  [10] .rel.pci_fixup    REL             00000000 2c9003c 000728 08     82   9  4
  [11] __ksymtab         PROGBITS        c12bb344 2bc344 004f58 00   A  0   0  4
  [12] .rel__ksymtab     REL             00000000 2c90764 009eb0 08     82  11  4
  [13] __ksymtab_gpl     PROGBITS        c12c029c 2c129c 0014c8 00   A  0   0  4
  [14] .rel__ksymtab_gpl REL             00000000 2c9a614 002990 08     82  13  4
  [15] __ksymtab_gpl_fut PROGBITS        c12c1764 2c2764 000018 00   A  0   0  4
  [16] .rel__ksymtab_gpl REL             00000000 2c9cfa4 000030 08     82  15  4
  [17] __kcrctab         PROGBITS        c12c177c 2c277c 0027ac 00   A  0   0  4
  [18] .rel__kcrctab     REL             00000000 2c9cfd4 004f58 08     82  17  4
  [19] __kcrctab_gpl     PROGBITS        c12c3f28 2c4f28 000a64 00   A  0   0  4
  [20] .rel__kcrctab_gpl REL             00000000 2ca1f2c 0014c8 08     82  19  4
  [21] __kcrctab_gpl_fut PROGBITS        c12c498c 2c598c 00000c 00   A  0   0  4
  [22] .rel__kcrctab_gpl REL             00000000 2ca33f4 000018 08     82  21  4
  [23] __ksymtab_strings PROGBITS        c12c49a0 2c59a0 00dea0 00   A  0   0 32
  [24] __param           PROGBITS        c12d2840 2d3840 00085c 00   A  0   0  4
  [25] .rel__param       REL             00000000 2ca340c 000d48 08     82  24  4
  [26] __bug_table       PROGBITS        c12d4000 2d5000 0037b0 00   A  0   0  1
  [27] .rel__bug_table   REL             00000000 2ca4154 004a40 08     82  26  4
  [28] .tracedata        PROGBITS        c12d77b0 2d87b0 000018 00   A  0   0  1
  [29] .rel.tracedata    REL             00000000 2ca8b94 000020 08     82  28  4
  [30] .data             PROGBITS        c12d8000 2d9000 02b670 00  WA  0   0 128
  [31] .rel.data         REL             00000000 2ca8bb4 00b8a8 08     82  30  4
  [32] .data_nosave      PROGBITS        c1304000 305000 002000 00  WA  0   0 4096
  [33] .data.page_aligne PROGBITS        c1306000 307000 000800 00  WA  0   0 32
  [34] .data.cacheline_a PROGBITS        c1306800 307800 00bb80 00  WA  0   0 128
  [35] .rel.data.cacheli REL             00000000 2cb445c 000e30 08     82  34  4
  [36] .data.read_mostly PROGBITS        c1312380 313380 002934 00  WA  0   0 128
  [37] .rel.data.read_mo REL             00000000 2cb528c 000220 08     82  36  4
  [38] .data.init_task   PROGBITS        c1315000 316000 001000 00  WA  0   0 32
  [39] .rel.data.init_ta REL             00000000 2cb54ac 000018 08     82  38  4
  [40] .smp_locks        PROGBITS        c1316000 317000 003830 00   A  0   0  4
  [41] .rel.smp_locks    REL             00000000 2cb54c4 007060 08     82  40  4
  [42] .init.text        PROGBITS        c131a000 31b000 020c99 00  AX  0   0  1
  [43] .rel.init.text    REL             00000000 2cbc524 012dd0 08     82  42  4
  [44] .init.data        PROGBITS        c133b000 33c000 011173 00  WA  0   0 4096
  [45] .rel.init.data    REL             00000000 2ccf2f4 000ce0 08     82  44  4
  [46] .init.setup       PROGBITS        c134c180 34d180 0006f0 00  WA  0   0  4
  [47] .rel.init.setup   REL             00000000 2ccffd4 000940 08     82  46  4
  [48] .initcall.init    PROGBITS        c134c870 34d870 0003f0 00  WA  0   0  4
  [49] .rel.initcall.ini REL             00000000 2cd0914 0007e0 08     82  48  4
  [50] .con_initcall.ini PROGBITS        c134cc60 34dc60 00000c 00  WA  0   0  4
  [51] .rel.con_initcall REL             00000000 2cd10f4 000018 08     82  50  4
  [52] .security_initcal PROGBITS        c134cc6c 34dc6c 000008 00  WA  0   0  4
  [53] .rel.security_ini REL             00000000 2cd110c 000010 08     82  52  4
  [54] .altinstructions  PROGBITS        c134cc74 34dc74 00282b 00   A  0   0  4
  [55] .rel.altinstructi REL             00000000 2cd111c 003590 08     82  54  4
  [56] .altinstr_replace PROGBITS        c134f49f 35049f 000b38 00  AX  0   0  1
  [57] .rel.altinstr_rep REL             00000000 2cd46ac 000070 08     82  56  4
  [58] .exit.text        PROGBITS        c134ffd8 350fd8 000afb 00  AX  0   0  1
  [59] .rel.exit.text    REL             00000000 2cd471c 000cd0 08     82  58  4
  [60] .init.ramfs       PROGBITS        c1351000 352000 000086 00   A  0   0  1
  [61] .data.percpu      PROGBITS        c1351100 352100 004a64 00  WA  0   0 128
  [62] .rel.data.percpu  REL             00000000 2cd53ec 000028 08     82  61  4
  [63] .bss              NOBITS          c1356000 356b64 0b8000 00  WA  0   0 4096
  [64] .comment          PROGBITS        00000000 356b64 00ac80 00      0   0  1
  [65] .debug_aranges    PROGBITS        00000000 3617e4 009668 00      0   0  1
  [66] .rel.debug_arange REL             00000000 2cd5414 005bd8 08     82  65  4
  [67] .debug_pubnames   PROGBITS        00000000 36ae4c 030986 00      0   0  1
  [68] .rel.debug_pubnam REL             00000000 2cdafec 001e00 08     82  67  4
  [69] .debug_info       PROGBITS        00000000 39b7d2 2140b0c 00      0   0  1
  [70] .rel.debug_info   REL             00000000 2cdcdec ef2e88 08     82  69  4
  [71] .debug_abbrev     PROGBITS        00000000 24dc2de 10715e 00      0   0  1
  [72] .debug_line       PROGBITS        00000000 25e343c 1d3b5a 00      0   0  1
  [73] .rel.debug_line   REL             00000000 3bcfc74 003018 08     82  72  4
  [74] .debug_frame      PROGBITS        00000000 27b6f98 05d8d8 00      0   0  4
  [75] .rel.debug_frame  REL             00000000 3bd2c8c 031c60 08     82  74  4
  [76] .debug_str        PROGBITS        00000000 2814870 0d0f7d 01  MS  0   0  1
  [77] .debug_loc        PROGBITS        00000000 28e57ed 280299 00      0   0  1
  [78] .rel.debug_loc    REL             00000000 3c048ec 1abdc0 08     82  77  4
  [79] .debug_ranges     PROGBITS        00000000 2b65a86 061950 00      0   0  1
  [80] .rel.debug_ranges REL             00000000 3db06ac 05b3c0 08     82  79  4
  [81] .shstrtab         STRTAB          00000000 2bc73d6 0002fb 00      0   0  1
  [82] .symtab           SYMTAB          00000000 3e0ba6c 07fa60 10     83 22028  4
  [83] .strtab           STRTAB          00000000 3e8b4cc 0a6a77 00      0   0  1
Key to Flags:
  W (write), A (alloc), X (execute), M (merge), S (strings)
  I (info), L (link order), G (group), x (unknown)
  O (extra OS processing required) o (OS specific), p (processor specific)
[hjl@gnu-5 linux-2.6.21.i686]$
Comment 1 H.J. Lu 2007-07-09 18:44:35 UTC
A patch is posted at

http://sourceware.org/ml/binutils/2007-07/msg00189.html
Comment 2 H.J. Lu 2007-07-10 13:49:28 UTC
Fixed.